# zhichuanlen_rangenet_16

./: README.md
SomeTest/: PLOT_SOME_3D.ipynb  README.md  data_utils.py  get_imu.py  kitti1.py  kitti_utils.py  plot_some.ipynb  publish_utils.py
make_dataset/: CMakeLists.txt  README.md  bin_pcd_cov.cpp  cov_kitti_to_16.sh  make_dataset.cpp  pub_semetic_pointcloud2.py  rosmsg2bin.cpp
make_semantic_map/: CMakeLists.txt  README.md  get_pgm_from_pcd.cpp  save_semantic_map.cpp
